Added unit test for launching 1d pipeline partial tiles

--- a/automation/unit_tests/README
+++ b/automation/unit_tests/README
@@ -6,6 +6,8 @@ DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
 
+!!IMPORTANT: Please DO NOT use production database for tests, as it will be emptied afterwards!!
+
 You need to provide an empty database for the tests to run. It is easy to do this with psql. 
 The tests will create possum schema if it's not already there, and it will be dropped with the contents afterwards.
 So you need to make sure this database is not going to be used elsewhere.
@@ -13,4 +15,4 @@ So you need to make sure this database is not going to be used elsewhere.
 How to run the tests:
 =====================
 In the root directory (POSSUMutils), run: 
-python3 -m unittest <automation/tests/test-file-name.py>
+python3 -m unittest <automation.unit_tests.test-file-name>
