--- a/automation/unit_tests/README
+++ b/automation/unit_tests/README
@@ -21,3 +21,5 @@ python3 -m unittest <automation.unit_tests.test-file-name>
 OR, to run all tests:
  
 python -m unittest discover
+
+python -m unittest discover -s automation/unit_tests
